tests/ui/rust-2018/unresolved-asterisk-imports.stderr
error[E0432]: unresolved import `not_existing_crate`
  --> $DIR/unresolved-asterisk-imports.rs:3:5
   |
LL | use not_existing_crate::*;
   |     ^^^^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `not_existing_crate`
   |
   = help: if you wanted to use a crate named `not_existing_crate`, use `cargo add not_existing_crate` to add it to your `Cargo.toml`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0432`.
